--- a/파이썬 연습문제.ipynb
+++ b/파이썬 연습문제.ipynb
@@ -1140,6 +1140,122 @@
     "# 간략히\n",
     "print((arr > 10).sum()) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bisbn</th>\n",
+       "      <th>btitle</th>\n",
+       "      <th>bauthor</th>\n",
+       "      <th>bprice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>978-89-6848-047-8</td>\n",
+       "      <td>파이썬 라이브러리를 활용한 데이터 분석</td>\n",
+       "      <td>웨스 맥키니(Wes Mckinney)</td>\n",
+       "      <td>33000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>978-89-6848-114-7</td>\n",
+       "      <td>파이썬을 활용한 베이지안 통계: 동전 던지기와 하키 승률로 배우는 데이터 분석</td>\n",
+       "      <td>앨런 B. 다우니</td>\n",
+       "      <td>18000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>978-89-6848-181-9</td>\n",
+       "      <td>파이썬 웹 프로그래밍: Django(장고)로 배우는 쉽고 빠른 웹 개발</td>\n",
+       "      <td>김석훈</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>978-89-7914-819-0</td>\n",
+       "      <td>Head First Programming : 파이썬으로 처음 배우는 프로그래밍</td>\n",
+       "      <td>폴 배리, 데이빗 그리피스</td>\n",
+       "      <td>26000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>978-89-7914-868-8</td>\n",
+       "      <td>Head First Python : 머리에 쏙쏙 들어오는 파이썬 안내서</td>\n",
+       "      <td>폴 배리</td>\n",
+       "      <td>30000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               bisbn                                       btitle  \\\n",
+       "0  978-89-6848-047-8                        파이썬 라이브러리를 활용한 데이터 분석   \n",
+       "1  978-89-6848-114-7  파이썬을 활용한 베이지안 통계: 동전 던지기와 하키 승률로 배우는 데이터 분석   \n",
+       "2  978-89-6848-181-9      파이썬 웹 프로그래밍: Django(장고)로 배우는 쉽고 빠른 웹 개발   \n",
+       "3  978-89-7914-819-0  Head First Programming : 파이썬으로 처음 배우는 프로그래밍   \n",
+       "4  978-89-7914-868-8      Head First Python : 머리에 쏙쏙 들어오는 파이썬 안내서   \n",
+       "\n",
+       "                bauthor  bprice  \n",
+       "0  웨스 맥키니(Wes Mckinney)   33000  \n",
+       "1             앨런 B. 다우니   18000  \n",
+       "2                   김석훈   20000  \n",
+       "3        폴 배리, 데이빗 그리피스   26000  \n",
+       "4                  폴 배리   30000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pymysql\n",
+    "\n",
+    "conn = pymysql.connect(\n",
+    "    user='csmscox', \n",
+    "    passwd='csmscox', \n",
+    "    host='localhost', \n",
+    "    db='library', \n",
+    "    charset='utf8'\n",
+    ")\n",
+    "\n",
+    "sql = \"SELECT bisbn, btitle, bauthor, bprice FROM book WHERE btitle LIKE '%파이썬%'\"\n",
+    "\n",
+    "try:\n",
+    "    df = pd.read_sql(sql, con=conn)\n",
+    "    display(df)\n",
+    "except Exception as err:\n",
+    "    print(err)\n",
+    "finally:\n",
+    "    conn.close()"
+   ]
   }
  ],
  "metadata": {
