--- a/NN/MNIST_TF1.15_DNN.ipynb
+++ b/NN/MNIST_TF1.15_DNN.ipynb
@@ -560,6 +560,7 @@
     "plt.imshow(img, cmap='gray') # cmap='gray_r의 경우 흑백 반전 = Greys'\n",
     "plt.show()\n",
     "\n",
+    "img = 255 - img\n",
     "norm_img = scaler_test.transform(img.reshape(1,-1))\n",
     "\n",
     "result = sess.run(H, feed_dict={X: norm_img})\n",
@@ -610,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
