Update 0324 TF1.15 CNN

--- a/ML/Fashion_MNIST_TF1.15_Multinomial_Classification.ipynb
+++ b/ML/Fashion_MNIST_TF1.15_Multinomial_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +46,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:\n",
+      "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
+      "For more information, please see:\n",
+      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
+      "  * https://github.com/tensorflow/addons\n",
+      "  * https://github.com/tensorflow/io (for I/O related ops)\n",
+      "If you depend on functionality not listed there, please file an issue.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# placeholder\n",
     "X = tf.placeholder(shape=[None,784], dtype=tf.float32)\n",
     "T = tf.placeholder(shape=[None,10], dtype=tf.float32)\n",
     "\n",
     "# Weight & bias\n",
-    "W = tf.Variable(tf.random.normal([784,10]), name='weight')\n",
+    "W = tf.get_variable('W1', shape=[784,10],\n",
+    "                    initializer=tf.contrib.layers.xavier_initializer())\n",
     "b = tf.Variable(tf.random.normal([10]), name='bias')\n",
     "\n",
     "# Hypothesis\n",
@@ -69,7 +85,7 @@
     "train = tf.train.GradientDescentOptimizer(learning_rate=0.1).minimize(loss)\n",
     "\n",
     "# parameter\n",
-    "num_of_epoch = 2000\n",
+    "num_of_epoch = 1000\n",
     "batch_size = 10000\n",
     "\n",
     "# 학습용 함수\n",
@@ -94,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -104,121 +120,71 @@
      "output_type": "stream",
      "text": [
       "### 학습 시작 ###\n",
-      "Loss : 12.563332557678223\n",
-      "Loss : 1.7948132753372192\n",
-      "Loss : 1.411192536354065\n",
-      "Loss : 1.236683964729309\n",
-      "Loss : 1.129176378250122\n",
-      "Loss : 1.0531063079833984\n",
-      "Loss : 0.994915246963501\n",
-      "Loss : 0.9481379985809326\n",
-      "Loss : 0.9092431664466858\n",
-      "Loss : 0.8761132955551147\n",
-      "Loss : 0.8473778367042542\n",
-      "Loss : 0.8220950961112976\n",
-      "Loss : 0.7995910048484802\n",
-      "Loss : 0.7793689966201782\n",
-      "Loss : 0.7610540986061096\n",
-      "Loss : 0.7443560361862183\n",
-      "Loss : 0.7290467023849487\n",
-      "Loss : 0.7149415016174316\n",
-      "Loss : 0.7018910050392151\n",
-      "Loss : 0.6897708177566528\n",
+      "Loss : 1.8557850122451782\n",
+      "Loss : 0.5734462141990662\n",
+      "Loss : 0.5155749917030334\n",
+      "Loss : 0.4876713454723358\n",
+      "Loss : 0.47017645835876465\n",
+      "Loss : 0.45787227153778076\n",
+      "Loss : 0.4486173689365387\n",
+      "Loss : 0.44133204221725464\n",
+      "Loss : 0.4354012608528137\n",
+      "Loss : 0.43044647574424744\n",
       "### 학습 종료 ###\n",
-      "측정한 각각의 결과값 : 0.8063333630561829\n",
+      "측정한 각각의 결과값 : 0.8502500057220459\n",
       "### 학습 시작 ###\n",
-      "Loss : 14.670181274414062\n",
-      "Loss : 1.7868245840072632\n",
-      "Loss : 1.4194927215576172\n",
-      "Loss : 1.2500920295715332\n",
-      "Loss : 1.1421419382095337\n",
-      "Loss : 1.064643383026123\n",
-      "Loss : 1.0049124956130981\n",
-      "Loss : 0.9567506909370422\n",
-      "Loss : 0.9167492985725403\n",
-      "Loss : 0.8827683329582214\n",
-      "Loss : 0.8533787131309509\n",
-      "Loss : 0.8275905251502991\n",
-      "Loss : 0.8046970963478088\n",
-      "Loss : 0.7841760516166687\n",
-      "Loss : 0.7656320333480835\n",
-      "Loss : 0.748758852481842\n",
-      "Loss : 0.733313798904419\n",
-      "Loss : 0.7191025018692017\n",
-      "Loss : 0.7059667706489563\n",
-      "Loss : 0.6937762498855591\n",
+      "Loss : 1.8782340288162231\n",
+      "Loss : 0.5630806088447571\n",
+      "Loss : 0.5045018792152405\n",
+      "Loss : 0.4771786630153656\n",
+      "Loss : 0.46030938625335693\n",
+      "Loss : 0.4485076069831848\n",
+      "Loss : 0.4396373927593231\n",
+      "Loss : 0.4326477646827698\n",
+      "Loss : 0.4269496500492096\n",
+      "Loss : 0.4221826195716858\n",
       "### 학습 종료 ###\n",
-      "측정한 각각의 결과값 : 0.8063333630561829\n",
+      "측정한 각각의 결과값 : 0.8475000262260437\n",
       "### 학습 시작 ###\n",
-      "Loss : 17.494312286376953\n",
-      "Loss : 1.7850265502929688\n",
-      "Loss : 1.392075538635254\n",
-      "Loss : 1.2103145122528076\n",
-      "Loss : 1.0993536710739136\n",
-      "Loss : 1.0220835208892822\n",
-      "Loss : 0.96381014585495\n",
-      "Loss : 0.9175018668174744\n",
-      "Loss : 0.8793433308601379\n",
-      "Loss : 0.8470525145530701\n",
-      "Loss : 0.8191949129104614\n",
-      "Loss : 0.7948169112205505\n",
-      "Loss : 0.7732433080673218\n",
-      "Loss : 0.7539722919464111\n",
-      "Loss : 0.7366193532943726\n",
-      "Loss : 0.72088223695755\n",
-      "Loss : 0.7065205574035645\n",
-      "Loss : 0.6933402419090271\n",
-      "Loss : 0.6811858415603638\n",
-      "Loss : 0.669930100440979\n",
+      "Loss : 1.9655777215957642\n",
+      "Loss : 0.5603289008140564\n",
+      "Loss : 0.5050690770149231\n",
+      "Loss : 0.4787876009941101\n",
+      "Loss : 0.4624054729938507\n",
+      "Loss : 0.45088261365890503\n",
+      "Loss : 0.4421843886375427\n",
+      "Loss : 0.43529990315437317\n",
+      "Loss : 0.4296610355377197\n",
+      "Loss : 0.42492061853408813\n",
       "### 학습 종료 ###\n",
-      "측정한 각각의 결과값 : 0.8032500147819519\n",
+      "측정한 각각의 결과값 : 0.8505833148956299\n",
       "### 학습 시작 ###\n",
-      "Loss : 12.833293914794922\n",
-      "Loss : 1.749043345451355\n",
-      "Loss : 1.3876756429672241\n",
-      "Loss : 1.2151914834976196\n",
-      "Loss : 1.1079347133636475\n",
-      "Loss : 1.0327080488204956\n",
-      "Loss : 0.9760029315948486\n",
-      "Loss : 0.9310306906700134\n",
-      "Loss : 0.893973171710968\n",
-      "Loss : 0.862571120262146\n",
-      "Loss : 0.8354203104972839\n",
-      "Loss : 0.8115923404693604\n",
-      "Loss : 0.7904389500617981\n",
-      "Loss : 0.7714881300926208\n",
-      "Loss : 0.754382312297821\n",
-      "Loss : 0.7388409972190857\n",
-      "Loss : 0.7246372103691101\n",
-      "Loss : 0.7115830779075623\n",
-      "Loss : 0.6995235085487366\n",
-      "Loss : 0.6883283853530884\n",
+      "Loss : 2.044292688369751\n",
+      "Loss : 0.5859737396240234\n",
+      "Loss : 0.5217639803886414\n",
+      "Loss : 0.4917145371437073\n",
+      "Loss : 0.4731332063674927\n",
+      "Loss : 0.46017178893089294\n",
+      "Loss : 0.45048028230667114\n",
+      "Loss : 0.44288837909698486\n",
+      "Loss : 0.4367353916168213\n",
+      "Loss : 0.43161651492118835\n",
       "### 학습 종료 ###\n",
-      "측정한 각각의 결과값 : 0.7990000247955322\n",
+      "측정한 각각의 결과값 : 0.8512499928474426\n",
       "### 학습 시작 ###\n",
-      "Loss : 9.178894996643066\n",
-      "Loss : 1.7844070196151733\n",
-      "Loss : 1.4053542613983154\n",
-      "Loss : 1.2359896898269653\n",
-      "Loss : 1.1289918422698975\n",
-      "Loss : 1.0517537593841553\n",
-      "Loss : 0.9918572306632996\n",
-      "Loss : 0.9432052969932556\n",
-      "Loss : 0.902510941028595\n",
-      "Loss : 0.8677999973297119\n",
-      "Loss : 0.8377619385719299\n",
-      "Loss : 0.8114628791809082\n",
-      "Loss : 0.7882088422775269\n",
-      "Loss : 0.7674672603607178\n",
-      "Loss : 0.7488226294517517\n",
-      "Loss : 0.7319461107254028\n",
-      "Loss : 0.716575026512146\n",
-      "Loss : 0.7024987936019897\n",
-      "Loss : 0.6895453333854675\n",
-      "Loss : 0.6775730848312378\n",
+      "Loss : 1.8386003971099854\n",
+      "Loss : 0.5662107467651367\n",
+      "Loss : 0.5093111991882324\n",
+      "Loss : 0.4821396470069885\n",
+      "Loss : 0.46509677171707153\n",
+      "Loss : 0.4530641734600067\n",
+      "Loss : 0.4439745545387268\n",
+      "Loss : 0.4367925822734833\n",
+      "Loss : 0.43092960119247437\n",
+      "Loss : 0.42602217197418213\n",
       "### 학습 종료 ###\n",
-      "측정한 각각의 결과값 : 0.8019999861717224\n",
-      "최종 K-Fold 교차검증을 사용한 Accuracy : 0.8033833503723145\n"
+      "측정한 각각의 결과값 : 0.847000002861023\n",
+      "최종 K-Fold 교차검증을 사용한 Accuracy : 0.8493167161941528\n"
      ]
     }
    ],
@@ -252,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "예측 값 : 7\n"
+      "예측 값 : 0\n"
      ]
     }
    ],
@@ -313,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy : 0.8082\n"
+      "Accuracy : 0.8527\n"
      ]
     }
    ],
