--- a/NN/Fashion_MNIST_TF1.15_DNN.ipynb
+++ b/NN/Fashion_MNIST_TF1.15_DNN.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "funny-going",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
     "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits=logit,\n",
     "                                                                 labels=T))\n",
     "# train\n",
-    "train = tf.train.GradientDescentOptimizer(learning_rate=1e-1).minimize(loss)\n",
+    "train = tf.train.AdamOptimizer(learning_rate=1e-2).minimize(loss)\n",
     "\n",
     "# parameter\n",
     "# num_of_epoch = 2000\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "wired-agreement",
    "metadata": {},
    "outputs": [
@@ -138,71 +138,32 @@
      "output_type": "stream",
      "text": [
       "### 학습 시작 ###\n",
-      "Loss : 3.5390403270721436\n",
-      "Loss : 0.6485595107078552\n",
-      "Loss : 0.5515878200531006\n",
-      "Loss : 0.5132061839103699\n",
-      "Loss : 0.4543035626411438\n",
-      "Loss : 0.44442373514175415\n",
-      "Loss : 0.4222090542316437\n",
-      "Loss : 0.41165637969970703\n",
-      "Loss : 0.3950428068637848\n",
-      "Loss : 0.3813610374927521\n",
-      "측정한 각각의 결과값 : 0.8631666898727417\n",
+      "Loss : 3.2450270652770996\n",
+      "Loss : 0.3459025025367737\n",
+      "Loss : 0.4072766900062561\n",
+      "Loss : 0.1869962215423584\n",
+      "Loss : 0.15635548532009125\n",
+      "측정한 각각의 결과값 : 0.8810999989509583\n",
       "### 학습 시작 ###\n",
-      "Loss : 2.890681028366089\n",
-      "Loss : 0.6592520475387573\n",
-      "Loss : 0.5479825139045715\n",
-      "Loss : 0.5096691250801086\n",
-      "Loss : 0.4587579667568207\n",
-      "Loss : 0.44227269291877747\n",
-      "Loss : 0.4257897138595581\n",
-      "Loss : 0.4045340120792389\n",
-      "Loss : 0.38736262917518616\n",
-      "Loss : 0.39035165309906006\n",
-      "측정한 각각의 결과값 : 0.8604166507720947\n",
+      "Loss : 3.9994871616363525\n",
+      "Loss : 0.398945152759552\n",
+      "Loss : 0.30473604798316956\n",
+      "Loss : 0.2226722687482834\n",
+      "Loss : 0.18649864196777344\n",
+      "측정한 각각의 결과값 : 0.8757500052452087\n",
       "### 학습 시작 ###\n",
-      "Loss : 2.8115251064300537\n",
-      "Loss : 0.6634060740470886\n",
-      "Loss : 0.5489011406898499\n",
-      "Loss : 0.47393667697906494\n",
-      "Loss : 0.49306026101112366\n",
-      "Loss : 0.4620361626148224\n",
-      "Loss : 0.4292508661746979\n",
-      "Loss : 0.40142735838890076\n",
-      "Loss : 0.38369491696357727\n",
-      "Loss : 0.3790864944458008\n",
-      "측정한 각각의 결과값 : 0.8544166684150696\n",
-      "### 학습 시작 ###\n",
-      "Loss : 3.0613300800323486\n",
-      "Loss : 0.6494472622871399\n",
-      "Loss : 0.5695834755897522\n",
-      "Loss : 0.5051358938217163\n",
-      "Loss : 0.45285364985466003\n",
-      "Loss : 0.43753790855407715\n",
-      "Loss : 0.40932658314704895\n",
-      "Loss : 0.40119946002960205\n",
-      "Loss : 0.3904568552970886\n",
-      "Loss : 0.3697583079338074\n",
-      "측정한 각각의 결과값 : 0.8565833568572998\n",
-      "### 학습 시작 ###\n",
-      "Loss : 2.9932587146759033\n",
-      "Loss : 0.6515575647354126\n",
-      "Loss : 0.565949022769928\n",
-      "Loss : 0.4848909378051758\n",
-      "Loss : 0.46494343876838684\n",
-      "Loss : 0.4429349899291992\n",
-      "Loss : 0.4114161729812622\n",
-      "Loss : 0.40855729579925537\n",
-      "Loss : 0.3832072615623474\n",
-      "Loss : 0.37336552143096924\n",
-      "측정한 각각의 결과값 : 0.8540833592414856\n",
-      "최종 K-Fold 교차검증을 사용한 Accuracy : 0.8577333688735962\n"
+      "Loss : 3.384739875793457\n",
+      "Loss : 0.3501146137714386\n",
+      "Loss : 0.25304415822029114\n",
+      "Loss : 0.19130012392997742\n",
+      "Loss : 0.17667385935783386\n",
+      "측정한 각각의 결과값 : 0.8820499777793884\n",
+      "최종 K-Fold 교차검증을 사용한 Accuracy : 0.879633367061615\n"
      ]
     }
    ],
    "source": [
-    "num_of_epoch = 1000\n",
+    "num_of_epoch = 500\n",
     "\n",
     "# Accuracy    \n",
     "predict = tf.argmax(H,1)\n",
@@ -210,7 +171,7 @@
     "accuracy = tf.reduce_mean(tf.cast(correct, dtype=tf.float32))\n",
     "\n",
     "# K-Fold Cross Validation\n",
-    "cv = 5          # Fold의 수\n",
+    "cv = 3          # Fold의 수\n",
     "results = []    \n",
     "                \n",
     "kf = KFold(n_splits=cv, shuffle=True) \n",
@@ -243,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "raising-antibody",
    "metadata": {},
    "outputs": [
@@ -251,7 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy : 0.8602\n"
+      "Accuracy : 0.8844\n"
      ]
     }
    ],
