--- a/NN/DogVsCat_TF2.x_CNN_ImgGen_InceptionResNetV2.ipynb
+++ b/NN/DogVsCat_TF2.x_CNN_ImgGen_InceptionResNetV2.ipynb
@@ -1785,13 +1785,13 @@
     "\n",
     "# 모델 구축\n",
     "\n",
-    "# vgg16 모델 불러오기\n",
+    "# InceptionResNetV2 모델 불러오기\n",
     "pre_trained_model = InceptionResNetV2(include_top=False, weights='imagenet',\n",
     "                                  input_shape=(224, 224, 3))\n",
     "pre_trained_model.trainable = False\n",
     "pre_trained_model.summary()\n",
     "\n",
-    "# vgg16 모델에 덧붙이기\n",
+    "# InceptionResNetV2 모델에 덧붙이기\n",
     "model = Sequential()\n",
     "model.add(pre_trained_model)\n",
     "model.add(Flatten())\n",
